--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <div class="card" id="calc">
                     <div class="card-body">
-                        <input class="form-control input-window" id="inputWindow" value="">
+                        <input class="form-control input-window" id="inputWindow" value="0">
                         <div class="row no-gutters">
                             <div class="col">
                                 <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
