--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -14,7 +14,7 @@
         <div class="col col-md-4 offset-md-4">
             <div class="form-group">
                 <div class="card" id="calc">
-                    <div class="card-body">
+                    <div class="card-body col">
                         <input class="form-control input-window" id="inputWindow" value="0">
                         <div class="row no-gutters">
                             <div class="col">
