--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -21,15 +21,22 @@
                         <div class="col">
                             <h3 class="card-title"><span id="surnameOutput">Генерация фамилии</span></h3>
                             <h4>Имя: <span id="firstNameOutput">Иван</span></h4>
+                            <!-- PATRONYMIC FIELD-->
                             <h4>Отчество: <span id="middleName">Иванович</span></h4>
                             <p>
                                 <span id="genderOutput">Генерация пола</span>
                                 <span>, </span>
                                 <span id="birthYearOutput">Генерация года рождения</span>
+                                <!-- PROFESSION FIELD-->
                                 <span id="profession">Профессия</span>
                             </p>
                         </div>
                     </div>
+                </div>
+                <!-- BUTTONS OF GENERATION AND CLEAR -->
+                <div class="btn-group">
+                    <button class="btn btn-info btn-lg" id="btnStart">Генерация</button>
+                    <button class="btn btn-success btn-lg" id="btnReset">Очистить</button>
                 </div>
             </div>
         </div>
