--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -35,8 +35,8 @@
                 </div>
                 <!-- BUTTONS OF GENERATION AND CLEAR -->
                 <div class="btn-group">
-                    <button class="btn btn-info btn-lg" id="btnStart">Генерация</button>
-                    <button class="btn btn-success btn-lg" id="btnReset">Очистить</button>
+                    <button class="btn btn-info btn-lg" id="btnGen">Генерация</button>
+                    <button class="btn btn-success btn-lg" id="btnClear">Очистить</button>
                 </div>
             </div>
         </div>
