--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -21,7 +21,7 @@
                         <div class="col">
                             <h3 class="card-title"><span id="surnameOutput">Генерация фамилии</span></h3>
                             <h4>Имя: <span id="firstNameOutput">Иван</span></h4>
-                            <!-- PATRONYMIC FIELD-->
+                            <!-- MIDDLE NAME FIELD-->
                             <h4>Отчество: <span id="middleName">Иванович</span></h4>
                             <p>
                                 <span id="genderOutput">Генерация пола</span>
