year of birth added

--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -26,6 +26,9 @@
                             <p>
                                 <span id="genderOutput">Генерация пола</span>
                                 <span>, </span>
+                                <!-- YEAR OF BIRTH -->
+                                <span id="birthYearOutput">Генерация года рождения</span> 
+                                <span>, </span>
                                 <!-- PROFESSION FIELD-->
                                 <span id="profession">Профессия</span>
                             </p>
